# rein-preservation

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  cef-mingw-support.patch  config.ru  crawlweb.rb  dbschema.rb  dumpmaster.sh  get-angle-binaries.rb  getcef.sh  grpc-mingw-build-fix.patch  il2cpp_types_for_ida.h  information.sql  makedb.rb  open_individual_db.sh  open_individual_db.sql  toolchain-windows-x86_64.txt
CompatibilityRuntime/: .gitignore  CMakeLists.txt  cef-versions.txt
CompatibilityRuntime/DynamicLibrarySupport/: CMakeLists.txt  LinuxDynamicLibrary.cpp  WindowsDynamicLibrary.cpp
CompatibilityRuntime/GameExecutable/: AVProVideoNativeBypass.cpp  AVProVideoNativeBypass.h  AndroidJNI.cpp  CMakeLists.txt  CommonUtilities.cpp  CommonUtilities.h  EntryPointLinux.cpp  EntryPointWindows.cpp  FastAES.cpp  FastAES.h  FastAESOpenSSL.cpp  FastAESWindows.cpp  GameEntryPoint.h  GameExecutable.manifest  GameExecutable.rc  GameServerInterface.cpp  GameServerInterface.h  Il2CppUtilities.cpp  Il2CppUtilitiesIconv.cpp  Il2CppUtilitiesWindows.cpp  Input.cpp  Input.h  Octo.cpp  Octo.h  OctoContentStorage.cpp  OctoContentStorage.h  ProcessCommandLine.h  ProcessCommandLineLinux.cpp  ProcessCommandLineLinux.h  ProcessCommandLineWindows.cpp  ProcessCommandLineWindows.h  UnityPatches.cpp  UnityPatches.h  UnityWebRequest.cpp  WebSupport.cpp  WebSupport.h  WindowsHelpers.cpp  WindowsHelpers.h  ZIPBasedStorage.cpp  ZIPBasedStorage.h  (+1 more)
CompatibilityRuntime/GameFramework/: CMakeLists.txt  GameFramework.rc  GlobalContext.cpp  GlobalContext.h  Il2CppUtilities.h  SystemAPIThunking.cpp  SystemAPIThunking.h  ThunkSymbolSource.cpp  ThunkSymbolSource.h  UnityWebRequest.cpp  android_api.cpp  android_api.h  grpc_channel_redirection.cpp  grpc_channel_redirection.h  grpc_csharp_ext.h  grpc_special_thunks.cpp  grpc_special_thunks.h  il2cpp-api-internal.h  il2cpp_api.cpp  makeapifuncs.rb  signal_compatibility.cpp  translator_main.cpp
CompatibilityRuntime/GameServer/: CMakeLists.txt  Gameserver.cpp  Gameserver.h  RPCProcessingThread.cpp  RPCProcessingThread.h  compile_migrations.rb  init.sql  main.cpp  version.lds
CompatibilityRuntime/Il2CppUtilities/: CMakeLists.txt  Il2CppUtilities.cpp  Il2CppUtilitiesWindows.cpp
CompatibilityRuntime/Launcher/: CMakeLists.txt  Launcher.manifest  Launcher.rc  LauncherApplication.cpp  LauncherApplication.h  LauncherApplicationInterface.cpp  LauncherApplicationInterface.h  LauncherConfiguration.cpp  LauncherConfiguration.h  LauncherPlatform.cpp  LauncherPlatform.h  LauncherPlatformWin32.cpp  LauncherPlatformWin32.h  LauncherPlatformX11.cpp  LauncherPlatformX11.h  main.cpp  nuklear_config.cpp  nuklear_config.h  nuklear_gdi.h  nuklear_xlib.h
CompatibilityRuntime/PrecompiledICallThunks/: CMakeLists.txt  version.lds
CompatibilityRuntime/TranslatorExtensionInterface/: ARMMachineContext.h  PrecompiledICallInterface.h
CompatibilityRuntime/UnityStub/: CMakeLists.txt  unity_stub.cpp
CompatibilityRuntime/WebViewHost/: CMakeLists.txt  ParentedContainerWindow.cpp  ParentedContainerWindow.h  WebView.cpp  WebView.h  WebViewApp.cpp  WebViewApp.h  WebViewBrowserViewDelegate.cpp  WebViewBrowserViewDelegate.h  WebViewClient.cpp  WebViewClient.h  WebViewContainerDelegate.cpp  WebViewContainerDelegate.h  WebViewHost.manifest  WebViewHost.rc  WebViewRPCImplementation.cpp  WebViewRPCImplementation.h  WebViewRPCServer.cpp  WebViewRPCServer.h  WebViewRPCServerLinux.cpp  WebViewRPCServerLinux.h  WebViewRPCServerWindows.cpp  WebViewRPCServerWindows.h  WebViewRPCService.cpp  WebViewRPCService.h  WebViewRenderHandler.cpp  WebViewRenderHandler.h  main.cpp
CompatibilityRuntime/armlib/: CMakeLists.txt  armlib.c
CompatibilityRuntime/bionic/: .gitignore  CMakeLists.txt  build.sh  call_arm_code_catching_exceptions.S  compatibility_runtime_unification.c  exception_handling.c
CompatibilityRuntime/grpc_csharp_ext/: CMakeLists.txt  grpc_csharp_ext.c
CompatibilityRuntime/icall_compiler/: ArgumentPackage.h  CMakeLists.txt  ICallMethod.cpp  ICallMethod.h  ICallMethodRegistry.cpp  ICallMethodRegistry.h  ICallType.cpp  ICallType.h  main.cpp
CompatibilityRuntime/interrogator/: CMakeLists.txt  extract-descriptors.cpp  interrogator.cpp
CompatibilityRuntime/makeelfpe/: CMakeLists.txt  main.cpp
CompatibilityRuntime/master_database_ext/: CMakeLists.txt  Database.cpp  DatabaseImage.cpp  GlobalContext.cpp  MasterDatabaseControlCursor.cpp  MasterDatabaseControlTable.cpp  MasterDatabaseControlTable.h  MasterDatabaseCursor.h
GameServer/: CMakeLists.txt  ExitOnEof.cpp  ExitOnEof.h  GameServer.conf  GameServer.manifest  GameServer.rc  GameServerConfiguration.cpp  GameServerConfiguration.h  Gameserver.cpp  Gameserver.h  JSONWriter.cpp  JSONWriter.h  ReloadableResource.cpp  ReloadableResource.h  ServerCommandLine.cpp  ServerCommandLine.h  WordListParser.cpp  WordListParser.h  dbview_schema.json  dbview_schema.sql  gitversion.h.in  init.sql  main.cpp
GameServer/DataModel/: ChangesetCapturingScope.cpp  ChangesetCapturingScope.h  CurrentNETTimestampFunction.cpp  Zlib.cpp  (+19 more)
LogAES/: CMakeLists.txt  aes.c  aes.h  frontend.c  frontend.h
asset-processing/: CMakeLists.txt  HalfFloat.cpp  HalfFloat.h  apk2gamedir.cpp  asset_reprocessing.cpp  asset_reprocessing.h  conversion_context.cpp  conversion_context.h  etc2_transcoder.cpp  etc2_transcoder.h  multi_part_zip_writer.cpp  multi_part_zip_writer.h  process_assets.cpp  rgbcx.cpp  unzip_handle.cpp  unzip_handle.h
fakeassembly/: .gitignore  CMakeLists.txt  DebugMemoryAccess.cpp  DebugMemoryAccess.h  ElfModule.cpp  ElfModule.h  FileDescriptor.cpp  GDBPacketFormatter.cpp  GDBPacketFormatter.h  GDBPacketLayer.cpp  GDBPacketLayer.h  GDBPacketParser.cpp  GDBStub.cpp  GDBStub.h  Image.cpp  Image.h  JIT.cpp  JIT.h  JITThreadContext.cpp  JITThreadContext.h  SystemAPIThunking.cpp  ThunkManager.cpp  ThunkManager.h  android_api.cpp  android_api.h  app.info  build.sh  icall_api.cpp  makeapifuncs.rb  signal_compatibility.cpp  signal_compatibility.h  support.cpp  support.h  thunking.cpp  thunking.h  thunkutils.S  version.lds
gitversion/: CMakeLists.txt  gitversion.h.in
(+780 files in other folders)
